syntax = "proto3";

package request;

import "account/fields/account-id-field.proto";

option java_multiple_files = true;
option java_package = "grpc.account.dto.request";

message CheckAccountByIdRequest {
  fields.AccountIdField account_id = 1;
}