syntax = "proto3";

package fields;

option java_multiple_files = true;
option java_package="grpc.account.fields";

message AccountIdField {
  int32 id = 1;
}